--- a/src/app/pages/payroll/paybandtemplate/paybandtemp.html
+++ b/src/app/pages/payroll/paybandtemplate/paybandtemp.html
@@ -31,18 +31,14 @@
                                     </div>
 
                                 </div>
-                                <div class="col-md-4">
-                                    <div class="pull-right">
-                                        <button ng-click="addNewRule()" type="button" class="btn btn-info btn-xs"><i class="fa fa-plus"></i> Add New Head</button>
-                                    </div>
-                                </div>
                             </div>
 
 
                             <div id="djGridPay" ui-grid="payTempGridOptions" ui-grid-expandable ui-grid-auto-resize ui-grid-pagination ui-grid-selection
-                                ui-grid-pinning ui-grid-edit class="paybandgrid"></div>
+                                ui-grid-pinning ui-grid-edit class="paybandgrid">
+                            </div>
                         </div>
-                       
+
                     </div>
                 </div>
             </div>
