--- a/src/app/pages/urm/permission/urm.permission.html
+++ b/src/app/pages/urm/permission/urm.permission.html
@@ -1,66 +1,56 @@
-<div class="row">
-    <div class="col-md-3" style="padding-right:0px; margin-right:0px;  ">
-        <div class="panel panel-default bootstrap-panel xmedium-panel">
-            <div class="panel-heading panHead" style="vertical-align: super">
-                User Roles
-            </div>
-
-            <div class="panel-body" style="overflow: scroll">
-                <ul class="list-unstyled side-menu maxHeight450">
-                    <li ng-repeat="t in roleList" ng-click="callMenu(t.RoleId)">
-                        <a href>{{t.RoleName}}</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
+<div class="panel panel-default bootstrap-panel xmedium-panel">
+    <div class="panel-heading panHead" style="vertical-align: super">
+        User & Roles Menu Permission
     </div>
-    <div class="col-md-9" style="padding-left:0px; margin-left:0px;">
-        <div class="panel panel-default bootstrap-panel xmedium-panel pnlScroll">
-            <div class="panel-heading clearfix">
-                Menu Permission for {{selectedRoleName}} <i ng-show="isLoadingPermission" class="fa fa-spinner fa-pulse fa-1x fa-fw"></i>
-            </div>
-            <div class="panel-body" style="padding:5px">
 
+    <div class="panel-body" style="overflow: scroll">
+
+        <uib-tabset class="tabs-left">
+            <uib-tab heading="Roles">
                 <div class="row">
                     <div class="col-md-5">
-                        <div ng-scrollbars ng-scrollbars-config="config" style="max-height: 430px">
+                        <select name="roles" id="roles" ng-model="selectedRoleId" class="form-control" ng-options="opt.RoleId as opt.RoleName for opt in roleList"
+                            ng-change="callMenu(selectedRoleId)"></select>
+
+                        <div ng-scrollbars ng-scrollbars-config="config" style="max-height: 350px">
                             <tree-view checkbox click="myClick(node)" model="nodes" ng-show="isPermissionLoaded"></tree-view>
                         </div>
 
                         <button ng-click="savePermission()" class="btn btn-info btn-lg" ng-disabled="isApplyingChanges">
-                                        <i ng-show="isApplyingChanges" class="fa fa-spinner fa-pulse fa-1x fa-fw"></i>
-                                        <span ng-hide="isApplyingChanges">Apply Changes</span>
-                                        <span ng-show="isApplyingChanges">Applying..</span>
-                        </button>
+                                                <i ng-show="isApplyingChanges" class="fa fa-spinner fa-pulse fa-1x fa-fw"></i>
+                                                <span ng-hide="isApplyingChanges">Apply Changes</span>
+                                                <span ng-show="isApplyingChanges">Applying..</span>
+                                </button>
 
                         <button type="button" class="btn btn-danger btn-lg" ng-click="reset()">Reset</button>
                     </div>
                     <div class="col-md-6">
                         <div ng-show="isShowActivity">
                             <div class="modal-header dialog-header-confirm">
-                                
+
                                 <div class="modal-title">
-                                    <span class="glyphicon glyphicon-check"></span>Page Activity of {{selectedMenuName}} Menu for {{selectedRoleName}}  
+                                    <span class="glyphicon glyphicon-check"></span>Page Activity of {{selectedMenuName}}
+                                    Menu for {{selectedRoleName}}
                                 </div>
                             </div>
                             <div class="modal-body row" ng-scrollbars ng-scrollbars-config="config" style="max-height: 330px">
-                            <ul style="list-style:none;">
-                                <li ng-repeat="opt in activityList">
-                                    <div class="checkbox">
-                                        <label class="custom-checkbox">      
-                                            <input  type="checkbox"  ng-model="opt.IsAllowed"> 
-                                            <span>{{opt.ActText}}</span>
-                                        </label>
-                                    </div>
-                                </li>
-                            </ul>
+                                <ul style="list-style:none;">
+                                    <li ng-repeat="opt in activityList">
+                                        <div class="checkbox">
+                                            <label class="custom-checkbox">      
+                                                    <input  type="checkbox"  ng-model="opt.IsAllowed"> 
+                                                    <span>{{opt.ActText}}</span>
+                                                </label>
+                                        </div>
+                                    </li>
+                                </ul>
                             </div>
                             <div class="modal-footer">
-                            <button ng-click="saveActivity()" class="btn btn-info btn-lg" ng-disabled="isSavingActivity">
-                                    <i ng-show="isSavingActivity" class="fa fa-spinner fa-pulse fa-1x fa-fw"></i>
-                                    <span ng-hide="isSavingActivity">Save</span>
-                                    <span ng-show="isSavingActivity">Saving..</span>
-                            </button>
+                                <button ng-click="saveActivity()" class="btn btn-info btn-lg" ng-disabled="isSavingActivity">
+                                            <i ng-show="isSavingActivity" class="fa fa-spinner fa-pulse fa-1x fa-fw"></i>
+                                            <span ng-hide="isSavingActivity">Save</span>
+                                            <span ng-show="isSavingActivity">Saving..</span>
+                                    </button>
 
                                 <button type="button" class="btn btn-danger" ng-click="isShowActivity=false">Cancel</button>
                             </div>
@@ -68,7 +58,23 @@
                     </div>
                 </div>
 
-            </div>
-        </div>
+            </uib-tab>
+            <uib-tab heading="Users">
+                <div class="row">
+                    <div class="col-md-2">
+                            <select name="location" id="location" ng-model="selectedLocationId" class="form-control" ng-options="opt.LocationId as opt.LocationName for opt in locationList"
+                            ng-change="changeLocation(selectedLocationId)"></select>
+                    </div>
+                    <div class="col-md-2">
+                            <select name="branch" id="branch" ng-model="selectedBranchId" class="form-control" ng-options="opt.BRId as opt.BRName for opt in branchList"
+                            ng-change="changeBranch(selectedBranchId)"></select>
+                    </div>
+                    <div class="col-md-2">
+                            <select name="sunit" id="sunit" ng-model="selectedSUnitId" class="form-control" ng-options="opt.SUId as opt.SUName for opt in subUnitList"
+                            ng-change="changeSUnit(selectedSUnitId)"></select>
+                    </div>
+                </div>
+            </uib-tab>
+        </uib-tabset>
     </div>
 </div>
