--- a/src/app/pages/payroll/masters/payband/payband.html
+++ b/src/app/pages/payroll/masters/payband/payband.html
@@ -94,7 +94,7 @@
                                 </div>
                                 <div class="col-md-4">
                                     <div class="pull-right">
-                                        <button ng-click="addNewRule()" type="button" class="btn btn-info btn-xs"><i class="fa fa-plus"></i> Add New Head</button>
+                                        <!-- <button ng-click="addNewRule()" type="button" class="btn btn-info btn-xs"><i class="fa fa-plus"></i> Add New Head</button> -->
                                     </div>
                                 </div>
                             </div>
