--- a/src/app/pages/attendance/shiftmaster/shiftmaster.html
+++ b/src/app/pages/attendance/shiftmaster/shiftmaster.html
@@ -133,6 +133,14 @@
                     </div>
                 </div>
             </div>
+            
+                <div class="checkbox">
+                    <label class="custom-checkbox"> 
+                            <input type="checkbox" ng-model="entity.SMAllowedNegitiveVerify"> 
+                             <span style="font:bold">{{page.pageinfo.fields.SMAllowedNegitiveVerify.place}}</span>
+                         </label>
+                </div>
+            
 
             <h3 class="with-line ">Minimum Working Criteria </h3>
             <div class="checkbox">
