--- a/src/app/common/components/gridBox/gridBox.html
+++ b/src/app/common/components/gridBox/gridBox.html
@@ -63,7 +63,9 @@
                 left:0px;" ng-click="page.showFilter=!page.showFilter">
                     <i ng-class="{'ion-arrow-right-b':!page.showFilter, 'ion-arrow-left-b':page.showFilter}"></i>
                 </button>
-                        <div id="djGrid1" ui-grid="page.gridOptions" ui-grid-auto-resize ui-grid-pagination ui-grid-selection ui-grid-pinning ui-grid-edit
+                
+                        <div id="djGrid1" ui-grid="page.gridOptions" 
+                        ui-grid-auto-resize ui-grid-pagination ui-grid-selection ui-grid-pinning ui-grid-edit ui-grid-expandable 
                             class="djGrid">
                             <div class="no-data" ng-if="page.gridOptions.data.length==0 && !page.dataIsLoading">{{page.boxOptions.noResultMessageText}}</div>
                             <div class="no-data font-black" ng-if="page.dataIsLoading">
