--- a/src/app/pages/attendance/transaction/manualmonthlyatt/attendance.manualmonthlyatt.html
+++ b/src/app/pages/attendance/transaction/manualmonthlyatt/attendance.manualmonthlyatt.html
@@ -68,16 +68,10 @@
                 <h3 class="with-line " ng-show="gridLine"></h3>
                 <div class="row" ng-if="weekGridOptions.data.length>0">
                     <div class="col-md-12">
-                        <div ui-grid="weekGridOptions" ui-grid-cellNav ui-grid-pagination ui-grid-edit ui-grid-expandable ui-grid-auto-resize ui-grid-selection
-                            class="grid"></div>
+                        <div style="height: 400px;" ui-grid="weekGridOptions" ui-grid-cellNav ui-grid-pagination ui-grid-edit ui-grid-expandable
+                            ui-grid-auto-resize ui-grid-selection class="grid"></div>
                     </div>
                 </div>
-
             </div>
-
-
-
-
-
         </div>
     </div>
